--- a/lang/strings_english.txt
+++ b/lang/strings_english.txt
@@ -27,3 +27,4 @@ $s_plugin_ChooseMyCSS_no_files_configured = 'No CSS found';
 
 # Preferences page
 $s_plugin_ChooseMyCSS_pref_file_title = 'CSS file name';
+$s_plugin_ChooseMyCSS_pref_no_file = '- No CSS file -';
